syntax = "proto3";

package physiques;

import "common/errors.proto";
import "common/numbers.proto";
import "kyc/kyc.proto";
import "google/protobuf/timestamp.proto";

// Backed by table 'kyc_physiques'
message Physique {
  string id = 1; // System Key: id is generated by the server or the database
  optional string race = 2;
  optional string ethnicity = 3;
  optional string eyes_color = 4;
  optional string hair_color = 5;
  optional string body_shape = 6;
  optional string height = 7;
  optional string weight = 8;
  kyc.Status status = 9;
}

message List {
  repeated Physique list = 1;
}

message SelectList {
  repeated string list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  optional string race = 1;
  optional string ethnicity = 2;
  optional string eyes_color = 3;
  optional string hair_color = 4;
  optional string body_shape = 5;
  optional string height = 6;
  optional string weight = 7;
  optional kyc.Status status = 8;
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    Physique physique = 2;
  }
}

message UpdateRequest {
  string id = 1;
  optional string race = 2;
  optional string ethnicity = 3;
  optional string eyes_color = 4;
  optional string hair_color = 5;
  optional string body_shape = 6;
  optional string height = 7;
  optional string weight = 8;
  optional kyc.Status status = 9;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    Physique physique = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  string id = 1;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    Physique physique = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional string race = 2;
  optional string ethnicity = 3;
  optional string eyes_color = 4;
  optional string hair_color = 5;
  optional string body_shape = 6;
  optional string height = 7;
  optional string weight = 8;
  optional kyc.StatusList status = 9;
}

message GetListResponse {
  oneof response {
    common.Error error = 1;
    Physique physique = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    Physique physique = 2;
  }
}

// This is to be used in Entities that requires Physique Assignment

message UpdatePhysique {
  optional string race = 1;
  optional string ethnicity = 2;
  optional string eyes_color = 3;
  optional string hair_color = 4;
  optional string body_shape = 5;
  optional string height = 6;
  optional string weight = 7;
  optional kyc.StatusList status = 8;
}
